# cloundfront-s3-sign

./: .gitignore  Makefile  pyproject.toml
cfs3sign/: __init__.py
