# [build-system]
# requires = ["setuptools", "setuptools-scm"]
# build-backend = "setuptools.build_meta"

[project]
version = "0.0.1"
name = "cloudfront-s3-sign"
dependencies = [
  "cryptography", "botocore"
]

[project.scripts]
cfs3sign = "cfs3sign:main"

[project.optional-dependencies]
dev = [
  "python-lsp-server[all]", 
  "python-lsp-black"
]

[pylsp.plugins.black]
enabled=true

[tool.black]
line-length = 79